<?xml version="1.0"?>
<package format="2">
  <name>dom_estimator</name>
  <version>0.0.0</version>
  <description>The dom_estimator package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>multi_robot_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>object_color_detector_msgs</build_depend>
  <build_depend>object_detector_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <export>
  </export>
</package>
